<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_LeakTestSettings" Id="{b7d86531-1986-4417-ba32-4d0dad7df5fa}">
    <Declaration><![CDATA[TYPE ST_LeakTestSettings :
STRUCT
	iAllowableLeakTestFailures	: UINT := 2;	 // Allowable leak test failures
	tLeakTestBuildUpTime		: UINT := 10; 	 // Time to be pressuring up the system
	tLeakTestMonitorTime		: UINT := 5;	 // Time to hold and monitoring the pressure into the system
	rLeakTestPressureLimit		: REAL := 3.8;	 // Leak test pressure threshold 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>